Changelog
=========

1.3 (unreleased)
----------------

- Nothing changed yet.


1.2 (2011-01-04)
----------------

- Sort the cleanup-comments-list on creation date.
  [maurits]


1.1 (2011-01-04)
----------------

- Handle redirection in the same way everywhere, so you also get to
  the same batched page using a came_from parameter.
  [maurits]

- Added '@@cleanup-comments-list' page that lists the latest comments.
  [maurits]


1.0 (2010-12-21)
----------------

- Initial release